fixes extensions reference for code-signing-ca

--- a/source/openssl.conf
+++ b/source/openssl.conf
@@ -98,7 +98,7 @@ default_days     = 3660
 default_md       = sha512
 default_bits     = 8192
 policy           = x-ca_policy
-x509_extensions  = code-signing_extensions
+x509_extensions  = code-signing-ca_extensions
 crlnumber        = $dir/root-ca.crlnumber.txt
 default_crl_days = 28
 preserve         = no
