fixes error in description and increase max character for emailAddress in request section

--- a/source/openssl.conf
+++ b/source/openssl.conf
@@ -341,7 +341,7 @@ authorityKeyIdentifier = keyid:always, issuer
 distinguished_name = request
 
 [ request ]
-countryName            = Country code-signing
+countryName            = Country code
 countryName_min        = 2
 countryName_max        = 2
 stateOrProvinceName    = State or province
@@ -353,7 +353,7 @@ commonName_min         = 1
 commonName_max         = 64
 emailAddress           = Email
 emailAddress_min       = 1
-emailAddress_max       = 64
+emailAddress_max       = 128
 
 [ __subjectAltName__ ]
 DNS = 
